Fix color contrast for link on disclaimer.

--- a/src/containers/Home.scss
+++ b/src/containers/Home.scss
@@ -6,6 +6,9 @@
      padding-top: 16px;
      padding-bottom: 16px;
      padding-left: 20px;
+     a {
+       color: #004795!important;
+     }
    }
     .usa-hero {
         background-color: #4a4a4a;
